--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
-    "express": "~4.14.1",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2",
     "env-port": "0.0.0",
+    "exists-file": "^3.0.0",
+    "express": "~4.14.1",
+    "i18n-express": "^1.1.2",
+    "morgan": "~1.7.0",
+    "multer": "^1.3.0",
+    "serve-favicon": "~2.3.2",
     "server-welcome": "0.0.0"
   }
 }
