--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   },
   "dependencies": {
     "body-parser": "~1.16.0",
+    "compression": "^1.6.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "env-port": "0.0.0",
     "exists-file": "^3.0.0",
     "express": "~4.14.1",
+    "express-beautify": "^0.1.3",
+    "express-minify": "^0.2.0",
     "i18n-express": "^1.1.2",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
