--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "bcrypt": "^1.0.2",
     "body-parser": "~1.16.0",
     "compression": "^1.6.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
@@ -16,9 +18,13 @@
     "express": "~4.14.1",
     "express-beautify": "^0.1.3",
     "express-minify": "^0.2.0",
+    "express-session": "^1.15.1",
+    "helmet": "^3.5.0",
     "i18n-express": "^1.1.2",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.2",
     "server-welcome": "0.0.0"
   }
