--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.2",
-    "server-welcome": "0.0.0"
+    "server-welcome": "0.0.0",
+    "tika": "^1.6.1"
   }
 }
