Remove install task

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "flydocument-encrypted",
   "version": "0.0.0",
   "scripts": {
-    "start": "node ./bin/flydocument-encrypted",
-    "install": "node-gyp configure; node-gyp build"
+    "start": "node ./bin/flydocument-encrypted"
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
